[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/UI_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/border_walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level_timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/attachment.gd" type="Script" id=5]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=6]

[node name="level_10_root" type="Node2D"]
script = ExtResource( 5 )

[node name="border_walls" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="level_timer" parent="." instance=ExtResource( 4 )]

[node name="UI_node" parent="." instance=ExtResource( 1 )]

[node name="coin" parent="." instance=ExtResource( 6 )]
position = Vector2( 391, 271 )

[node name="invisible_coin" type="Node" parent="."]

[connection signal="ready" from="invisible_coin" to="." method="_on_invisible_coin_ready"]
