[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/arrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level_timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/attachment.gd" type="Script" id=5]
[ext_resource path="res://scripts/teleport_node.gd" type="Script" id=6]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=7]

[node name="level_8_root" type="Node2D"]
script = ExtResource( 5 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 405, 318 )

[node name="level_timer" parent="." instance=ExtResource( 4 )]

[node name="UI_node" parent="." instance=ExtResource( 1 )]

[node name="arrow" parent="." instance=ExtResource( 2 )]

[node name="arrow2" parent="." instance=ExtResource( 2 )]
position = Vector2( 694, 336 )
rotation = 3.14159

[node name="arrow3" parent="." instance=ExtResource( 2 )]
position = Vector2( 406, 112 )
rotation = 1.5708

[node name="arrow4" parent="." instance=ExtResource( 2 )]
position = Vector2( 406, 520 )
rotation = -1.5708

[node name="teleport_node" type="Node" parent="."]
script = ExtResource( 6 )

[node name="coin" parent="." instance=ExtResource( 7 )]
position = Vector2( 395, -134 )

[connection signal="maze_finished" from="teleport_node" to="." method="_on_teleport_node_maze_finished"]
[connection signal="ready" from="teleport_node" to="player" method="_on_teleport_node_ready"]
