[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/border_walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/level_timer.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/attachment.gd" type="Script" id=6]
[ext_resource path="res://scenes/bomb.tscn" type="PackedScene" id=7]

[node name="level_9_root" type="Node2D"]
script = ExtResource( 6 )

[node name="UI_node" parent="." instance=ExtResource( 1 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 413, 537 )

[node name="border_walls" parent="." instance=ExtResource( 3 )]

[node name="coin" parent="." instance=ExtResource( 4 )]

[node name="coin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 751, 18 )

[node name="coin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 752, 553 )

[node name="coin4" parent="." instance=ExtResource( 4 )]
position = Vector2( 20, 553 )

[node name="coin5" parent="." instance=ExtResource( 4 )]
position = Vector2( 411, 300 )

[node name="level_timer" parent="." instance=ExtResource( 5 )]

[node name="hidden_bomb" type="Node" parent="."]

[node name="bomb" parent="." instance=ExtResource( 7 )]
position = Vector2( -285, 18 )

[connection signal="ready" from="hidden_bomb" to="." method="_on_hidden_bomb_ready"]
[connection signal="explode" from="bomb" to="level_timer" method="_on_bomb_explode"]
